--- a/About/index.html
+++ b/About/index.html
@@ -240,7 +240,7 @@ body {
         <a href="../" class="nav-item active">
             <span>Home</span>
         </a>
-        <a href="About/" class="nav-item">
+        <a href="" class="nav-item">
             <span>About</span></a>
     </nav>
 </body>
